<resources>
    <string name="app_name">GitHub Repo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repository_name">Repository Name</string>
    <string name="repo_author">Repo Author</string>
    <string name="a_short_description_about_the_repository">A short description about the repository...</string>
    <string name="language">Language</string>
    <string name="most_active_contributor">Most Active Contributor:</string>
    <string name="username">Username</string>
    <string name="_128">128</string>
    <string name="additions">additions</string>
    <string name="_256">256</string>
    <string name="deletions">deletions</string>
    <string name="commits">commits</string>
    <string name="_113">113</string>
    <string name="updated_on_jan_1_2019">Updated on Jan 1, 2019</string>
    <string name="search_for_a_repository">Search for a repository...</string>
</resources>