<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="9dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/textViewRepositoryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repository_name"
            android:textColor="@color/background"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewRepoAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repo_author" />

        <TextView
            android:id="@+id/textViewRepoDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a_short_description_about_the_repository"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textViewLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/language"
            android:textColor="@color/background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/most_active_contributor"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textViewUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/background" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewAdditionsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_128"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additions"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDeletionsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_256"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deletions"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCommitsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_113"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commits"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textViewUpdatedTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/updated_on_jan_1_2019"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>